Cleanup (#625)
* Cleanup

* Cleanup